# whoop-mcp-server

./: .containerignore  .gitignore  Containerfile  README.md  pyproject.toml
config/: .env.example
docs/: INTEGRATION.md
scripts/: auth.sh  build.sh  mcp-whoop.sh
src/: auth.py  whoop_client.py  whoop_server.py
